Added additional Stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Ninja - <%= title %></title>
-    </head>
+    <%- include('./partials/header.ejs') %>
     <body>
-        <nav>
-            <div class="site-title">
-                <a href="/"><h1>Blog Ninja</h1></a>
-                <p>A Net Ninja Site</p>
-            </div>
-            <ul>
-                <li><a href="/">Blogs</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/blogs/create">New Blogs</a></li>
-            </ul>
-        </nav>
+        <%- include('./partials/nav.ejs') %>
         <div class="blogs content">
             <h2>All Blogs</h2>
             <% if (blogs.length > 0) { %>
@@ -24,7 +10,10 @@
                     <h3 class="title"><%= blog.title %></h3>
                     <p class="snippet"><%= blog.snippet %></p>
                 <% }) %>
-            <% } %>
+            <% } else { %>
+                <h3 class="title">There are no blogs to display</h3>
+            <%} %>
         </div>
     </body>
+    <%- include('./partials/footer.ejs') %>
 </html>
