--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,21 +1,7 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Ninja - <%= title %></title>
-    </head>
+  <%- include('./partials/header.ejs') %>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Ninja</h1></a>
-            <p>A Net Ninja Site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blogs</a></li>
-        </ul>
-    </nav>
+  <%- include('./partials/nav.ejs') %>
 
   <div class="create-blog content">
     <form>
@@ -28,6 +14,6 @@
       <button>Submit</button>
     </form>
   </div>
-
 </body>
+<%- include('./partials/footer.ejs') %>
 </html>
