Removed Server App and Correct Stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
                     <a class="single" href="/blogs/<%= blog._id %>">
                         <h3 class="title"><%= blog.title %></h3>
                         <p class="snippet"><%= blog.snippet %></p>
+                        <!-- <br>
+                        <p class="snippet"><%= blog.body %></p> -->
                     </a>
                 <% }) %>
             <% } else { %>
