--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
         <li><a href="/">Blogs</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/blogs/create">New Blogs</a></li>
-        <li><a href="/all-blogs">All Blogs</a></li>
-        <li><a href="/single-blog">Single Blogs</a></li>
+        <li><a href="/blogs/all-blogs">All Blogs</a></li>
+        <li><a href="/blogs/single-blog">Single Blogs</a></li>
     </ul>
 </nav>
