Adding Folders for MVC

--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
     <body>
-        <%- include('./partials/nav.ejs') %>
+        <%- include('../partials/nav.ejs') %>
         <div class="blogs content">
             <h2>All Blogs</h2>
             <% if (blogs.length > 0) { %>
@@ -19,5 +19,5 @@
             <%} %>
         </div>
     </body>
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </html>
