--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
-  <%- include('./partials/header.ejs') %>
+  <%- include('../partials/header.ejs') %>
 <body>
-  <%- include('./partials/nav.ejs') %>
+  <%- include('../partials/nav.ejs') %>
 
   <div class="create-blog content">
     <form action="/blogs" method="POST">
@@ -15,5 +15,5 @@
     </form>
   </div>
 </body>
-<%- include('./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
 </html>
