--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -9,7 +9,9 @@
     <div class="content">
       <p><%= blog.body %></p>
     </div>
-    <a class="delete" data-doc="<%= blog._id %>">delete</a>
+    <a class="delete" data-doc="<%= blog._id %>">
+      <img src="/delete.png" alt="Delete Icon">
+    </a>
   </div>
 
   <%- include("../partials/footer.ejs") %>
